Use unsafe to copy to heap